--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e_backend",
   "version": "1.0.0",
-  "description": "This is a backend for a fincance managing application",
+  "description": "This is a backend for a finance managing application",
   "license": "ISC",
   "author": "Zero Axiis",
   "type": "module",
@@ -22,7 +22,7 @@
     "drizzle-orm": "^0.44.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.0-rc.4",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
